# equipo406

./: CMakeLists.txt  README.md  UsuarioReg.cc  UsuarioReg.h  a.out  a.txt  admin.cc  admin.h  coordCursos.cc  coordCursos.h  curso.cc  curso.h  filecurso.cc  filecurso.h  filedatos.cc  filelogin.cc  filelogin.h  participante.cc  participante.h  prueba.cc  prueba_filedatos.cc  prueba_ver_curso.cc  visitante.h
src/: CMakeLists.txt
src/admin/: CMakeLists.txt  admin.cc  admin.h
src/app/: CMakeLists.txt  app_main.cc
src/coordCursos/: CMakeLists.txt  coordCursos.cc  coordCursos.h
src/curso/: CMakeLists.txt  curso.cc  curso.h
src/filecurso/: CMakeLists.txt  filecurso.cc
src/filedatos/: CMakeLists.txt  filedatos.cc  filedatos.h
src/filelogin/: CMakeLists.txt  filelogin.cc
src/participante/: CMakeLists.txt  participante.cc  participante.h
src/usuarioReg/: CMakeLists.txt  usuarioReg.cc  usuarioReg.h
src/visitante/: CMakeLists.txt  visitante.cc
tests/: Archivo_main.txt  Biologia.txt  CMakeLists.txt  Matematicas.txt  basket_test.cc  file_datos.txt  filecurso_test.cc  filedatos_test.cc  filelogin_test.cc  test_filedatos.cc  usuarioReg_test.cc  usuarios_registrados.txt
